# lctes26-artifact

./: Dockerfile  README.md  evaluation.py  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml  publish-docker.yml
driver/: .editorconfig  CMakeLists.txt  buffer.c  buffer.h  fpga.c  fpga.h
scores/: copy-expt-10.sh  copy-expt-11.sh  copy-expt-3.sh  copy-expt-4.sh  copy-expt-6.sh  copy-expt-8.sh  copy-expt-9.sh  count_nodes.py  expt-1.sh  expt-10.sh  expt-11.sh  expt-2.sh  expt-3.sh  expt-4.sh  expt-5.sh  expt-6.sh  expt-8.sh  expt-9.sh  perf-expt-1.sh  perf-expt-10.sh  perf-expt-11.sh  perf-expt-2.sh  perf-expt-3.sh  perf-expt-4.sh  perf-expt-5.sh  perf-expt-6.sh  perf-expt-8.sh  perf-expt-9.sh  run-expt-1.sh  run-expt-10.sh  run-expt-11.sh  run-expt-3.sh  run-expt-4.sh  run-expt-5.sh  run-expt-6.sh  run-expt-8.sh  run-expt-9.sh
scripts/: profile
scripts/scores/: expt-1.sh  expt-2.sh  expt-4.sh  expt-5.sh  expt-6.sh  expt-7.sh
scripts/syntest/: real.sh  real_start.sh  real_sw.sh  sim.sh  sim_start.sh  sim_sw.sh
src/pytorch_shir.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/shir/: __init__.py  backend.py  backend2.py  backend2_lenet5.py  backend2_resnet3x3.py  backend2_resnet7x7.py  (+13 more)
tests/: lctes26_lenet.py  lctes26_resnet18.py  lctes26_resnet18_2.py  lctes26_resnet50.py  lctes26_resnet50_2.py  lctes26_resnet50_halved.py  lctes26_resnet50_third.py  lctes26_tiny_yolo.py  lctes26_vgg11.py  lctes26_vgg11_2.py  lctes26_vgg16.py  lctes26_vgg16_2.py  lctes26_vgg19.py  lctes26_vgg19_2.py
tmp/: copy_nodes.sh  figure.sh  figures.py  nodes.sh
(+34 files in other folders)
